--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "AWS Media Replay Engine (MRE) Workshop"
+title = "Workshop Template"
 theme = "hugo-theme-learn"
 
 [params]
@@ -9,9 +9,9 @@ theme = "hugo-theme-learn"
   # See the config.toml file from this documentation site to have an example.
   editURL = ""
   # Author of the site, will be used in meta information
-  author = "kevinol@, kylehh@"
+  author = "kylehh@"
   # Description of the site, will be used in meta information
-  description = "AWS Media Replay Engine (MRE) Workshop"
+  description = "Workshop Template"
   # Shows a checkmark for visited pages on the menu
   showVisitedLinks = false
   # Disable search function. It will hide search bar
